--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:exported="false"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name=".auth.AuthActivity"
+            android:name=".auth.view.AuthActivity"
             android:exported="false" />
     </application>
 </manifest>
